apply plugin: 'com.android.application'

android {
    compileSdkVersion 28
    defaultConfig {
        applicationId "com.ximsfei.gallery2"
        minSdkVersion 19
        targetSdkVersion 24
        versionCode 1
        versionName "1.0"

        renderscriptTargetApi 19
//        renderscriptSupportModeEnabled true
    }
    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
        }
    }
    sourceSets {
        main {
            java.srcDirs = ['src/main/java', 'src/gallerycommon/java', 'src_pd', 'XMPCore/src', 'isoparser/src/main/java']
            jni.srcDirs = []
            jniLibs.srcDir "src/main/libs"
        }
    }
    useLibrary 'org.apache.http.legacy'
    compileOptions {
        sourceCompatibility = 1.8
        targetCompatibility = 1.8
    }
}

dependencies {
    implementation fileTree(dir: 'libs', include: ['*.jar'])
    implementation 'com.android.support:support-v13:28.0.0'
}
